examples/type_system/failing/57_strict_entry_path_parity.flx
public fn bad(x) -> Int {
    x
}

fn test_should_fail() -> Unit {
}

fn main() -> Unit {
}
